tests/compiler_errors/name_redefinitions/mem_redef_type.tlp
struct foo int end
reserve foo 1 end